force-app/main/default/objects/Push_Notification_Recipient__c/Push_Notification_Recipient__c.object-meta.xml
<CustomObject>
    <label>Push Notification Recipient</label>
    <nameField>
        <displayFormat>PNR-{0000000}</displayFormat>
        <label>Push Notification Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Push Notification Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>