force-app/main/default/objects/Push_Notification_Recipient__c/fields/ExKey__c.field-meta.xml
<CustomField>
    <fullName>ExKey__c</fullName>
    <externalId>true</externalId>
    <label>ExKey</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>