force-app/main/default/objects/Push_Notification_Recipient__c/fields/IsNotificationDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsNotificationDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNotificationDeleted</label>
    <type>Checkbox</type>
</CustomField>