force-app/main/default/objects/Push_Notification_Recipient__c/fields/IsRead__c.field-meta.xml
<CustomField>
    <fullName>IsRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRead</label>
    <type>Checkbox</type>
</CustomField>