force-app/main/default/objects/Push_Notification_Recipient__c/fields/LastDateRead__c.field-meta.xml
<CustomField>
    <fullName>LastDateRead__c</fullName>
    <label>LastDateRead</label>
    <type>Date</type>
</CustomField>