force-app/main/default/objects/Push_Notification_Recipient__c/fields/ObjectField_Json__c.field-meta.xml
<CustomField>
    <fullName>ObjectField_Json__c</fullName>
    <label>ObjectField Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>