force-app/main/default/objects/Push_Notification_Recipient__c/fields/Push_Notification_Item__c.field-meta.xml
<CustomField>
    <fullName>Push_Notification_Item__c</fullName>
    <label>Push Notification Item</label>
    <referenceTo>Push_Notification_Item__c</referenceTo>
    <relationshipLabel>Push Notification Recipients</relationshipLabel>
    <relationshipName>Push_Notification_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>